openshift/dc-frontend.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: frontend
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
name: frontend
labels:
    app: frontend
spec:
  replicas: 1
  selector:
    name: frontend
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        name: frontend
      name: frontend
    spec:
      containers:
      - name: frontend
        image: frontend:latest
        imagePullPolicy: Always    
        ports:
        - name: frontend-port
          containerPort: 8080
        volumeMounts:
          - name: frontend-config
            readOnly: true
            mountPath: '/opt/app-root/env'            
        readinessProbe:
          tcpSocket:
            port: frontend-port
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: frontend-port
          initialDelaySeconds: 15
          periodSeconds: 20
      serviceAccount: guacrobot
      volumes:
      - name: frontend-config
        configMap:
          name: configmap-frontend
          items:
            - key: env
              path: .env
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - frontend
      from:
        kind: ImageStreamTag
        name: frontend:latest
    type: ImageChange
