openshift/svc-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend  
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: frontend
