openshift/svc-mqocp.yml
apiVersion: v1
kind: Service
metadata:
  name: mqocp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: mqocp
