openshift/route-mqocp.yml
apiVersion: v1
kind: Route
metadata:
  name: mqocp
spec:
  to:
    kind: Service
    name: mqocp
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
